@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow nil serialized attributes with a set class constraint. #7293 [sandofsky] 
+
 * belongs_to assignment creates a new proxy rather than modifying its target in-place.  #8412 [mmangino@elevatedrails.com]
 
 * Fix column type detection while loading fixtures.  Closes #7987 [roderickvd]
